# api

./: .dockerignore  .env.example  .env.production.example  .flake8  .gitignore  .pre-commit-config.yaml  DEPLOY_SELECTEL.md  Dockerfile  Makefile  README.md  SELECTEL_FIRST_RUN_CHECKLIST.md  docker-compose.dev-ci.yml  docker-compose.prod-ci.yml  docker-compose.yml  dump.rdb  manage.py  mypy.ini  pyproject.toml  release-package.yml  startup.sh
.github/: pull_request_template.md
_trial_temp.lock/: symlink
alerts/: apps.py  urls.py  views.py
auth_jwt/: apps.py  models.py  serializers.py  urls.py  views.py
chats/: admin.py  apps.py  consumers.py  exceptions.py  managers.py  middleware.py  models.py  pagination.py  permissions.py  routing.py  serializers.py  urls.py  utils.py  views.py  websockets_settings.py
core/: admin.py  constants.py  email.py  fields.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  services.py  throttling.py  urls.py  utils.py  views.py
courses/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
docs/: api-safety-fix-plan.md  api.md  application-project-submission-rfc.md  application-team-model.md  application-team-service.md  architecture.md  case-championship-domain.md  chats.md  development.md  devops-state.md  program-participation-policy.md  react-dev-backend.md  readme.md  submission-evaluation-domain.md  team-invites-api.md  team-permissions-api.md
events/: admin.py  apps.py  constants.py  filters.py  helpers.py  managers.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
feed/: constants.py  helpers.py  mapping.py  pagination.py  serializers.py  services.py  signals.py  urls.py  views.py
files/: admin.py  apps.py  constants.py  exceptions.py  helpers.py  models.py  serializers.py  service.py  tests.py  typings.py  urls.py  views.py
industries/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
invites/: admin.py  apps.py  filters.py  managers.py  models.py  permissions.py  querysets.py  serializers.py  tests.py  urls.py  views.py
kanban/: apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
log/: migrated_users.json
logs/: middleware.py
mailing/: admin.py  apps.py  constants.py  definitions.py  models.py  rendering.py  scenarios.py  tasks.py  tests.py  typing.py  urls.py  utils.py  views.py
metrics/: apps.py  services.py  urls.py  views.py
moderation/: models.py  serializers.py  services.py  tests.py
news/: admin.py  apps.py  filters.py  managers.py  mapping.py  mixins.py  models.py  pagination.py  permissions.py  pytest.ini  querysets.py  serializers.py  services.py  tests.py  urls.py  views.py
nginx/: Dockerfile  nginx.conf
notifications/: admin.py  models.py  services.py  tasks.py  telegram.py  telegram_views.py  tests.py
partner_programs/: admin.py  application_urls.py  applications_views.py  apps.py  constants.py  helpers.py  mixins.py  models.py  pagination.py  permissions.py  privacy.py  selectors.py  serializers.py  services.py  submission_urls.py  submission_views.py  tasks.py  team_invite_urls.py  team_invite_views.py  team_views.py  tests.py  tests_edit_readiness.py  tests_verification.py  throttling.py  urls.py  utils.py  verification_services.py  views.py
procollab/: __init__.py  asgi.py  celery.py  settings.py  settings_helpers.py  urls.py  wsgi.py  (+1 more)
(+599 files in other folders)
