[tool.poetry]
name = "procollab-backend"
version = "0.1.0"
description = ""
authors = ["Sergey Yaksanov <sergeyyaksanov@yandex.ru>"]
readme = "README.md"
packages = [{include = "procollab_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.14.0"
flake8 = "^5.0.4"
python-decouple = "^3.6"
psycopg2 = "^2.9.4"
psycopg2-binary = "^2.9.4"
django-cleanup = "^6.0.0"
django-cors-headers = "^3.13.0"
django-debug-toolbar = "^3.7.0"
Pillow = "^9.2.0"
djangorestframework-simplejwt = {extras = ["crypto"], version = "^5.2.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
